syntax = "proto3";
package proto;

message RecordReq {
    string esData = 1;
}

message RecordRsp {
    int32 errno = 1;
    string errmsg = 2;
    string data = 3;
}

service Agent {
    rpc Record(RecordReq) returns (RecordRsp) {}
}